# Prog1_Klausur

./: CMakeLists.txt  README.md
studenten/: ausgaben.c  ausgaben.h  datentypen.h  studenten01.c
verallgemeinern/: mein_qSort.c  mein_qSort.h  verallgemeinern01.c
